fix: refactor scenario to scenery

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
         <h3>Line Up</h3>
         <p class="day">Viernes 21</p>
         <div class="scenarios-container container">
-            <div class="scenario rock bg-yellow">
-                <p class="name-scenario">Escenario Rock</p>
+            <div class="scenery rock bg-yellow">
+                <p class="name-scenery">Escenario Rock</p>
                 <ul class="calendar">
                     <li>
                         24:00 | <span>Metallica</span>
@@ -86,10 +86,10 @@
                         17:00 | <span>30 Seconds to Mars</span>
                     </li>
                 </ul>
-            </div> <!-- .scenario -->
+            </div> <!-- .scenery -->
 
-            <div class="scenario edm bg-green">
-                <p class="name-scenario">Escenario EDM</p>
+            <div class="scenery edm bg-green">
+                <p class="name-scenery">Escenario EDM</p>
                 <ul class="calendar">
                     <li>
                         24:00 | <span>Deadmau5</span>
@@ -111,13 +111,13 @@
                         17:00 | <span>Audien</span>
                     </li>
                 </ul>
-            </div> <!-- .scenario -->
-        </div> <!-- .scenario-container -->
+            </div> <!-- .scenery -->
+        </div> <!-- .scenery-container -->
 
         <p class="day">Sábado 22</p>
         <div class="scenarios-container container">
-            <div class="scenario rock bg-green">
-                <p class="name-scenario">Escenario Rock</p>
+            <div class="scenery rock bg-green">
+                <p class="name-scenery">Escenario Rock</p>
                 <ul class="calendar">
                     <li>
                         24:00 | <span>Red Hot Chili Peppers</span>
@@ -139,10 +139,10 @@
                         17:00 | <span>Lamb of God</span>
                     </li>
                 </ul>
-            </div> <!-- .scenario -->
+            </div> <!-- .scenery -->
 
-            <div class="scenario edm bg-yellow">
-                <p class="name-scenario">Escenario EDM</p>
+            <div class="scenery edm bg-yellow">
+                <p class="name-scenery">Escenario EDM</p>
                 <ul class="calendar">
                     <li>
                         24:00 | <span>Paul Van Dyk</span>
@@ -164,8 +164,8 @@
                         17:00 | <span>Vini Vici</span>
                     </li>
                 </ul>
-            </div> <!-- .scenario -->
-        </div> <!-- .scenario-container -->
+            </div> <!-- .scenery -->
+        </div> <!-- .scenery-container -->
     </section>
 
     <section class="gallery container">
