--- a/index.html
+++ b/index.html
@@ -168,10 +168,10 @@
         </div> <!-- .scenery-container -->
     </section>
 
-    <section class="gallery container">
+    <!-- <section class="gallery container">
         <h3>Galería</h3>
         <ul class="gallery-images"></ul>
-    </section>
+    </section> -->
 
 </body>
 
