feat(gallery): add gallery images using javascript
show images with javascript

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="build/css/app.css">
+    <script src="build/js/app.js"></script>
 </head>
 
 <body>
@@ -168,10 +169,10 @@
         </div> <!-- .scenery-container -->
     </section>
 
-    <!-- <section class="gallery container">
+    <section class="gallery container">
         <h3>Galería</h3>
         <ul class="gallery-images"></ul>
-    </section> -->
+    </section>
 
 </body>
 
